--- a/Resources/Languages/Dutch.json
+++ b/Resources/Languages/Dutch.json
@@ -64,11 +64,13 @@
   "Filters_Outline_Description": "Creërt een omlijning rond de gekozen regio.",
   "Filters_Outline_Character": "Teken",
   "Filters_Outline_Character_Tooltip": "Teken om te gebruiken als omlijning.",
-  "Filters_Wave": null,
-  "Filters_Main_Strength": "Sterkte",
-  "Filter_Apply": "Pas filter toe.",
+  "Filters_Wave": "Golven",
+  "Filters_Wave_Description": "Vervormt een laag langs de sinusgolf en de opgegeven as.",
+  "Filters_Main_Offset": "Afstand",
+  "Filters_Wave_Offset_Tooltip": "Sinusgolf-offset",
+  "Filter_Apply": "Pas filter toe",
   "Create": "Creëer",
-  "Edit": "Bewerk",
+  "Edit": "Bewerken",
   "ASCIIArt": "ASCII Kunst",
   "Size": "Grootte",
   "InvalidSizeMessage": "Lengte & breedte moet boven 0 en een natuurlijke nummer zijn!",
@@ -78,16 +80,17 @@
   "BackgroundColor": "Achtergrond",
   "TextColor": "Tekst",
   "Error_InvalidImageExportTextSizeMessage": "Ongeldige tekstgrootte! Textgrootte moet tussen 1 en 256 zijn.",
-  "ColorPicker": "Kleur Kiezer",
+  "ColorPicker": "Kleur kiezer",
   "HexColor": "Hex",
-  "Error_InvalidHexColorMessage": "Ongeldige hex-kleur!",
+  "Error_InvalidHexColorMessage": "Ongeldige hexadecimale kleur!",
   "Error_InvalidColorMessage": "Ongeldige kleur!",
-  "ImageASCIIArtImportOptions": "Foto ASCII Kunst Importeer Opties",
+  "ImageASCIIArtImportOptions": "Foto ASCII kunst importopties",
   "InvertBrightness": "Helderheid omkeren",
   "Scale": "Schaal",
-  "ImageArtLayerConverter_Characters": "Gebruikte tekens",
+  "ImageArtLayerConverter_Characters": "Tekens",
   "ImageArtLayerConverter_Characters_Info": "<= DICHTER  ========  SCHAARSER =>\n(Space is een lege teken)",
   "Error_ImageArtLayerConverter_Characters_Invalid": "Importeer palet moet minstens één teken gebruiken!",
+  "Language_GetStreamError": "Kan taalgegevens niet ophalen; ingesteld op standaard!",
   "Settings_Language": "Taal",
   "Settings_UserInterface": "Gebruikersomgeving",
   "Settings_CanvasFont": "Canvas-lettertype",
@@ -144,7 +147,7 @@
   "File_LargeFileWarningMessage": "De bestand die je probeert te creëeren/bewerken/openen heeft een canvas oppervlakte van {0} tekens. Dit is boven de aanbeloven oppervlakte limiet van {1} tekens.\nDit bestand kan lang duren om geladen en bewaard te worden, en kan zeer zwaar zijn op prestatie.\nBen je zeker dat je wilt verdergaan?",
   "File_TooLargeMessage": "Canvas oppervlakte is te groot! Max: {0} tekens ({1} tekens)",
   "File_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen aanwezig in dit bestand.\nWilt je eerst bewaren?",
-  "Error_Application_StartUpErrorMessage": "Het lijkt erop dat {0} een onverwerkte uitzondering heeft tegengekomen, waardoor het programma moet sluiten! Als dit zich blijft voordoen, informeer dan de maker van {0}!\\nToon log bestand?",
+  "Error_Application_StartUpErrorMessage": "Het lijkt erop dat {0} een onverwerkte uitzondering heeft tegengekomen, waardoor het programma moet sluiten! Als dit zich blijft voordoen, informeer dan de maker van {0}!\nToon log bestand?",
   "Application_CloseWithoutSavingWarningMessage": "Er zijn niet-opgeslagen wijzingen.\nBen je zeker dat je wilt afsluiten? (Alle wijzingen worden weggegooid)",
   "Application_AutoCloseMessage": "Programma zal automatisch afsluiten na dat de huidige achtergrond taak voltooid is.",
   "Application_CloseBackgroundTaskErrorMessage": "Er is een fout gebeurd tijdens het voltooien van de huidige achtergrond taak.\nHet afsluiten van de programma is stop gezet.\nUitzondetingsbericht: {0}",
@@ -172,9 +175,10 @@
   "PresetPalette_Braille8": "8-punts braille",
   "Autosave": "Automatisch bewaren",
   "Autosave_Busy": "Alle open bestanden aan het bewaren...",
+  "Error_Autosave_UnfinishedQuit": "Automatisch bewaren van bestanden deed langer dan 30 seconden.",
   "Error_Autosave_FileSaving": "Automatisch bewaren is gemislukt!\nUitzonderingsbericht: {0}",
   "Error_Autosave_SettingsSaving": "Opslag van instellingen mislukte tijdens het automatisch bewaren van bestanden!\nUitzonderingsbericht: {0}",
-  "Tool_Options": "Werktuig Opties",
+  "Tool_Options": "Werktuig opties",
   "Tool_PencilTool": "Potlood",
   "Tool_EraserTool": "Gom",
   "Tool_SelectTool": "Selecteer",
