--- a/Resources/Languages/French.json
+++ b/Resources/Languages/French.json
@@ -57,101 +57,104 @@
   "Filters_Main_SelectionOutsideMessage": "La sélection est en dehors du calque sélectionné.",
   "Filters_Main_UnavailableMessage": "Le filtre n'est pas disponible.",
   "Filters_Mirror": "Refléter",
-  "Filters_Mirror_Description": null,
-  "Filters_Main_Axis": null,
-  "Filters_Mirror_Axis_Tooltip": null,
-  "Filters_Outline": null,
-  "Filters_Outline_Description": null,
-  "Filters_Outline_Character": null,
-  "Filters_Outline_Character_Tooltip": null,
-  "Filters_Wave": null,
-  "Filters_Main_Strength": null,
-  "Filter_Apply": null,
-  "Create": null,
+  "Filters_Mirror_Description": "Met en miroir/retourne la région spécifiée autour de l'axe spécifié.",
+  "Filters_Main_Axis": "Axe",
+  "Filters_Mirror_Axis_Tooltip": "L’axe autour duquel refléter.",
+  "Filters_Outline": "Contour",
+  "Filters_Outline_Description": "Crée un contour autour de la région spécifiée.",
+  "Filters_Outline_Character": "Caractère",
+  "Filters_Outline_Character_Tooltip": "Caractère à utiliser comme contour.",
+  "Filters_Wave": "Vague",
+  "Filters_Wave_Description": "Déforme un calque le long de l'onde sinusoïdale et de l'axe spécifié.",
+  "Filters_Main_Offset": "Offset",
+  "Filters_Wave_Offset_Tooltip": "Offset d'onde sinusoïdale",
+  "Filter_Apply": "Appliquer le filtre",
+  "Create": "Créer",
   "Edit": "Modifier",
   "ASCIIArt": "ASCII Illustration",
-  "Size": null,
-  "InvalidSizeMessage": null,
-  "ImageASCIIArtExportOptions": null,
-  "TextSize": null,
+  "Size": "Taille",
+  "InvalidSizeMessage": "La largeur et la hauteur doivent toutes deux être supérieures à 0 et doivent toutes deux être des nombres naturels!",
+  "ImageASCIIArtExportOptions": "Options d'exportation d'images ASCII",
+  "TextSize": "Taille du texte",
   "Colors": "Couleurs",
-  "BackgroundColor": null,
-  "TextColor": null,
-  "Error_InvalidImageExportTextSizeMessage": null,
-  "ColorPicker": null,
+  "BackgroundColor": "Arrière-plan",
+  "TextColor": "Texte",
+  "Error_InvalidImageExportTextSizeMessage": "Taille du texte invalide! La taille du texte doit être comprise entre 1 et 256.",
+  "ColorPicker": "Pipette à couleurs",
   "HexColor": "Hex",
-  "Error_InvalidHexColorMessage": null,
-  "Error_InvalidColorMessage": null,
-  "ImageASCIIArtImportOptions": null,
-  "InvertBrightness": null,
-  "Scale": null,
-  "ImageArtLayerConverter_Characters": null,
-  "ImageArtLayerConverter_Characters_Info": null,
-  "Error_ImageArtLayerConverter_Characters_Invalid": null,
+  "Error_InvalidHexColorMessage": "Couleur hexadécimale invalide!",
+  "Error_InvalidColorMessage": "Couleur invalide!",
+  "ImageASCIIArtImportOptions": "Options d'importation d'images ASCII",
+  "InvertBrightness": "Inverser la luminosité",
+  "Scale": "Ampleur",
+  "ImageArtLayerConverter_Characters": "Caractères",
+  "ImageArtLayerConverter_Characters_Info": "<= PLUS DENSE == PLUS CLAIRSEMÉ =>\n(Espace est un caractère vide)",
+  "Error_ImageArtLayerConverter_Characters_Invalid": "La palette d'importation doit utiliser au moins un caractère!",
+  "Language_GetStreamError": "Les données linguistiques n'ont pas été obtenues, c'est mises par défaut!",
   "Settings_Language": "Langue",
-  "Settings_UserInterface": null,
-  "Settings_CanvasFont": null,
-  "Settings_ToolPreviews": null,
-  "Settings_Files": null,
-  "Settings_AutosaveFiles": null,
-  "Settings_AutosaveInterval": null,
-  "Settings_OpenAutosavesFolder": null,
-  "Settings_Apply": null,
-  "Settings_Reset": null,
-  "Settings_ResetWarningMessage": null,
-  "Error_Settings_InvalidAutosaveIntervalMessage": null,
+  "Settings_UserInterface": "Interface utilisateur",
+  "Settings_CanvasFont": "Police de toile",
+  "Settings_ToolPreviews": "Afficher les aperçus des outils",
+  "Settings_Files": "Fichiers",
+  "Settings_AutosaveFiles": "Sauvegarde automatique des fichiers",
+  "Settings_AutosaveInterval": "Sauvegarde toutes les {0} minutes",
+  "Settings_OpenAutosavesFolder": "Ouvrir le dossier des sauvegardes automatiques",
+  "Settings_Apply": "Appliquer les changements",
+  "Settings_Reset": "Tout réinitialiser",
+  "Settings_ResetWarningMessage": "Êtes-vous sûr de vouloir réinitialiser tous les paramètres?",
+  "Error_Settings_InvalidAutosaveIntervalMessage": "Intervalle de sauvegarde automatique non valide! L'intervalle de temps doit être supérieur à 0 et inférieur à 120 minutes et ne doit pas comporter de décimales.",
   "Palette": "Palette",
   "Name": "Nom",
-  "Palette_Characters": null,
-  "Error_Palette_InvalidCharacterMessage": null,
-  "Error_Palette_InvalidNameMessage": null,
-  "Error_Palette_InvalidFileNameMessage": null,
-  "Palette_CreateBusy": null,
-  "Palette_CreateFailedMessage": null,
-  "Palette_EditBusy": null,
-  "Palette_EditFailedMessage": null,
-  "Palette_RemoveMessage": null,
-  "Palette_RemoveBusy": null,
-  "Palette_RemoveFailedMessage": null,
-  "Error_Palette_AlreadyExistsMessage": null,
-  "Palette_EditPresetPaletteMessage": null,
-  "Palette_RemovePresetPaletteMessage": null,
-  "Palette_New": null,
-  "Palette_Edit": null,
-  "Palette_Remove": null,
-  "LayerOptions": null,
-  "LayerOptions_Offset": null,
-  "Tool_NoLayerSelectedCaption": null,
-  "Tool_NoLayerSelectedMessage": null,
-  "Tool_Size": null,
-  "Tool_StayInsideSelection": null,
-  "Tool_EightDirectional": null,
-  "Tool_Fill": null,
-  "File_Drop_NoExtensionMessage": null,
-  "File_Drop_UnknownExtensionMessage": null,
-  "File_DifferentVersionMessage": null,
-  "File_ExportFailedMessage": null,
-  "File_ExportBusy": null,
-  "File_ExportSuccessMessage": null,
-  "File_SaveFailedMessage": null,
-  "File_SaveBusy": null,
-  "File_SaveSuccessMessage": null,
-  "File_OpenBusy": null,
-  "File_OpenFailedMessage": null,
-  "File_ImportBusy": null,
-  "File_ImportFailedMessage": null,
-  "File_Close": null,
-  "File_LargeFileWarningMessage": null,
-  "File_TooLargeMessage": null,
-  "File_CloseWithoutSavingWarningMessage": null,
-  "Error_Application_StartUpErrorMessage": null,
-  "Application_CloseWithoutSavingWarningMessage": null,
-  "Application_AutoCloseMessage": null,
-  "Application_CloseBackgroundTaskErrorMessage": null,
-  "Application_AlreadyRunningMessage": null,
-  "BackgroundTaskBusyMessage": null,
-  "Application_Exit_SettingsSaveErrorMessage": null,
-  "About": null,
+  "Palette_Characters": "Caractères",
+  "Error_Palette_InvalidCharacterMessage": "La palette contient un caractère non valide: {0}",
+  "Error_Palette_InvalidNameMessage": "Nom invalide! Le nom de la palette ne peut pas être vide ou ne comporter que des espaces blancs!",
+  "Error_Palette_InvalidFileNameMessage": "Nom invalide! Le nom de la palette contient ces caractères: {0}",
+  "Palette_CreateBusy": "Création de la palette {0}...",
+  "Palette_CreateFailedMessage": "La création de la palette a échoué! Message d'exception: {0}",
+  "Palette_EditBusy": "Modification de la palette {0}...",
+  "Palette_EditFailedMessage": "Échec de la modification de la palette {0}! Message d'exception: {1}",
+  "Palette_RemoveMessage": "Êtes-vous sûr de vouloir supprimer la palette {0}?\r\nIl n'est pas possible d'annuler cette opération.",
+  "Palette_RemoveBusy": "Suppression de la palette {0}...",
+  "Palette_RemoveFailedMessage": "Échec de la suppression de la palette {0}! Message d'exception: {1}",
+  "Error_Palette_AlreadyExistsMessage": "La palette {0} existe déjà!",
+  "Palette_EditPresetPaletteMessage": "Impossible de modifier les palettes prédéfinies.",
+  "Palette_RemovePresetPaletteMessage": "Il n'est pas possible de supprimer les palettes prédéfinies.",
+  "Palette_New": "Nouvelle palette",
+  "Palette_Edit": "Modifier la palette",
+  "Palette_Remove": "Supprimer la palette",
+  "LayerOptions": "Options de calque",
+  "LayerOptions_Offset": "Décalage",
+  "Tool_NoLayerSelectedCaption": "Aucune calque n'est sélectionné",
+  "Tool_NoLayerSelectedMessage": "Veuillez sélectionner un calque!",
+  "Tool_Size": "Taille",
+  "Tool_StayInsideSelection": "Restez dans la sélection",
+  "Tool_EightDirectional": "Huit directionnels",
+  "Tool_Fill": "Remplir",
+  "File_Drop_NoExtensionMessage": "Impossible d'ouvrir un fichier déposé sans extension!\r\nChemin du fichier: {0}",
+  "File_Drop_UnknownExtensionMessage": "Impossible d'ouvrir le fichier déposé avec l'extension {0}!\r\nChemin d'accès au fichier: {1}",
+  "File_DifferentVersionMessage": "Le fichier ASCII Art peut ne pas être totalement compatible avec cette version, la version du fichier n'est pas égale à la version du fichier que cette version est conçue pour gérer.\r\nVersion du fichier ASCII Art: {0}\r\nVersion du fichier de la version actuelle: {1}",
+  "File_ExportFailedMessage": "Échec de l'exportation du fichier artistique!\r\nMessage d'exception: {0}",
+  "File_ExportBusy": "Exportation vers {0}...",
+  "File_ExportSuccessMessage": "Fichier artistique exporté vers {0}!\r\nOuvrir le fichier?",
+  "File_SaveFailedMessage": "Échec de la sauvegarde du fichier artistique!\nMessage d'exception : {0}",
+  "File_SaveBusy": "Sauvegarde {0}...",
+  "File_SaveSuccessMessage": "Fichier artistique sauvegardé sur {0}!",
+  "File_OpenBusy": "Ouverture {0}...",
+  "File_OpenFailedMessage": "Échec de l'ouverture du fichier d'art !\r\nMessage d'exception : {0}",
+  "File_ImportBusy": "Importation de {0}...",
+  "File_ImportFailedMessage": "Échec de l'importation du fichier artistique!\r\nMessage d'exception: {0}",
+  "File_Close": "Fermer le fichier",
+  "File_LargeFileWarningMessage": "Le fichier que vous essayez de créer/modifier/ouvrir a une zone de toile de {0} caractères. Cette zone est supérieure à la limite recommandée de {1} caractères.\nLe chargement et la saveguarde de ce fichier risquent d'être longs et de peser sur les performances.\nÊtes-vous sûr de vouloir continuer?",
+  "File_TooLargeMessage": "La surface de la toile est trop grande! Max: {0} caractères ({1} caractères}",
+  "File_CloseWithoutSavingWarningMessage": "Vous avez effectué des modifications qui n'ont pas été sauvegardées.\r\nSouhaitez-vous les sauvegarder?",
+  "Error_Application_StartUpErrorMessage": "Il semble que {0} ait rencontré une exception non gérée et doit être fermé ! Si cela continue à se produire, veuillez en informer le créateur de {0} !\r\nOuvrir le fichier journal ?",
+  "Application_CloseWithoutSavingWarningMessage": "Vous avez effectué des modifications qui n'ont pas été sauvegardées.\nÊtes-vous sûr de vouloir quitter? (Toutes les modifications seront annulées)",
+  "Application_AutoCloseMessage": "L'application se fermera automatiquement lorsque la tâche d'arrière-plan en cours sera terminée après ce message.",
+  "Application_CloseBackgroundTaskErrorMessage": "Une erreur s'est produite lors de l'exécution de la tâche d'arrière-plan, la sortie de l'application a été annulée.\r\nMessage d'exception : {0}",
+  "Application_AlreadyRunningMessage": "Il y a déjà une instance de {0} en cours d'exécution !",
+  "BackgroundTaskBusyMessage": "La tâche d'arrière-plan en cours doit se terminer pour que cette action puisse être effectuée.",
+  "Application_Exit_SettingsSaveErrorMessage": "Les paramètres n'ont pas été sauvegardés lors de la sortie de l'application!\nMessage d'exception: {0}\nOuvrir le fichier journal?",
+  "About": "À propos du programme",
   "Credits": "Crédits",
   "Credits_Translation": "Kiara, le Polyglot Projet, Google Translate",
   "Credits_Section_Translation": "Traduction",
@@ -159,21 +162,22 @@
   "Credits_Section_DevelopedBy": "Développé par",
   "Credits_Testers": "Aucun testeur",
   "Credits_Section_Testers": "Testeurs",
-  "Default_Palettes_New": null,
-  "Default_Layers_Background": null,
+  "Default_Palettes_New": "Nouvelle palette",
+  "Default_Layers_Background": "Arrière-plan",
   "Default_Layers_NewLayer": "Nouvelle calque",
-  "Default_Layers_CloneFormat": null,
-  "Error_DefaultInvalidPropertyMessage": null,
-  "PresetPalette_Alphabet": null,
-  "PresetPalette_Main": null,
-  "PresetPalette_Numbers": null,
-  "PresetPalette_Shapes": null,
-  "PresetPalette_Braille6": null,
-  "PresetPalette_Braille8": null,
-  "Autosave": null,
-  "Autosave_Busy": null,
-  "Error_Autosave_FileSaving": null,
-  "Error_Autosave_SettingsSaving": null,
+  "Default_Layers_CloneFormat": "{0} copie",
+  "Error_DefaultInvalidPropertyMessage": "Invalide {0}!",
+  "PresetPalette_Alphabet": "Alphabet",
+  "PresetPalette_Main": "Principaux caractères ASCII",
+  "PresetPalette_Numbers": "Numéros",
+  "PresetPalette_Shapes": "Formes",
+  "PresetPalette_Braille6": "Braille à 6 points",
+  "PresetPalette_Braille8": "Braille à 8 points",
+  "Autosave": "Sauvegarde automatique",
+  "Autosave_Busy": "Sauvegarde automatique de tous les fichiers ouverts...",
+  "Error_Autosave_UnfinishedQuit": "La sauvegarde automatique a duré plus de 30 secondes.",
+  "Error_Autosave_FileSaving": "Échec de la sauvegarde automatique!\r\nMessage d'exception: {0}",
+  "Error_Autosave_SettingsSaving": "La mise à jour des paramètres lors de la sauvegarde automatique a échoué!\r\nMessage d'exception: {0}",
   "Tool_Options": "Options d'outils",
   "Tool_PencilTool": "Crayon",
   "Tool_EraserTool": "Gomme",
