--- a/Resources/Languages/Spanish.json
+++ b/Resources/Languages/Spanish.json
@@ -57,101 +57,104 @@
   "Filters_Main_SelectionOutsideMessage": "La selección está fuera de la capa seleccionada.",
   "Filters_Main_UnavailableMessage": "El filtro no está disponible.",
   "Filters_Mirror": "Reflejar",
-  "Filters_Mirror_Description": null,
-  "Filters_Main_Axis": null,
-  "Filters_Mirror_Axis_Tooltip": null,
-  "Filters_Outline": null,
-  "Filters_Outline_Description": null,
-  "Filters_Outline_Character": null,
-  "Filters_Outline_Character_Tooltip": null,
-  "Filters_Wave": null,
-  "Filters_Main_Strength": null,
-  "Filter_Apply": null,
-  "Create": null,
-  "Edit": null,
-  "ASCIIArt": null,
-  "Size": null,
-  "InvalidSizeMessage": null,
-  "ImageASCIIArtExportOptions": null,
-  "TextSize": null,
-  "Colors": null,
-  "BackgroundColor": null,
-  "TextColor": null,
-  "Error_InvalidImageExportTextSizeMessage": null,
-  "ColorPicker": null,
+  "Filters_Mirror_Description": "Refleja/invierte la región especificada alrededor del eje especificado.",
+  "Filters_Main_Axis": "Eje",
+  "Filters_Mirror_Axis_Tooltip": "El eje alrededor del cual reflejarse.",
+  "Filters_Outline": "Contorno",
+  "Filters_Outline_Description": "Crea un contorno alrededor de la región especificada.",
+  "Filters_Outline_Character": "Carácter",
+  "Filters_Outline_Character_Tooltip": "Carácter para usar como contorno.",
+  "Filters_Wave": "Ola",
+  "Filters_Wave_Description": "Distorsiona una capa a lo largo de la onda sinusoidal y el eje especificado.",
+  "Filters_Main_Offset": "Offset",
+  "Filters_Wave_Offset_Tooltip": "Offset de onda sinusoidal",
+  "Filter_Apply": "Aplicar filtro",
+  "Create": "Crear",
+  "Edit": "Editar",
+  "ASCIIArt": "Arte ASCII",
+  "Size": "Tamaño",
+  "InvalidSizeMessage": "¡El ancho y el alto deben ser superiores a 0 y ambos deben ser números naturales!",
+  "ImageASCIIArtExportOptions": "Opciones de exportación de arte ASCII de imagen",
+  "TextSize": "Tamaño del texto",
+  "Colors": "Colores",
+  "BackgroundColor": "Fondo",
+  "TextColor": "Texto",
+  "Error_InvalidImageExportTextSizeMessage": "¡Tamaño de texto no válido! El tamaño del texto debe estar entre 1 y 256.",
+  "ColorPicker": "Selector de color",
   "HexColor": "Hex",
-  "Error_InvalidHexColorMessage": null,
-  "Error_InvalidColorMessage": null,
-  "ImageASCIIArtImportOptions": null,
-  "InvertBrightness": null,
-  "Scale": null,
-  "ImageArtLayerConverter_Characters": null,
-  "ImageArtLayerConverter_Characters_Info": null,
-  "Error_ImageArtLayerConverter_Characters_Invalid": null,
+  "Error_InvalidHexColorMessage": "¡Color hexadecimal no válido!",
+  "Error_InvalidColorMessage": "¡Color no válido!",
+  "ImageASCIIArtImportOptions": "Opciones de importación de arte ASCII de imagen",
+  "InvertBrightness": "invertir brillo",
+  "Scale": "Magnitud",
+  "ImageArtLayerConverter_Characters": "Carácters",
+  "ImageArtLayerConverter_Characters_Info": "<= MÁS DENSA === MÁS ESCASA =>\n(El espacio es un carácter vacío)",
+  "Error_ImageArtLayerConverter_Characters_Invalid": "¡La paleta de importación debe utilizar al menos 1 carácter!",
+  "Language_GetStreamError": "Error al obtener los datos del idioma, ¡poner por defecto!",
   "Settings_Language": "Idioma",
-  "Settings_UserInterface": null,
-  "Settings_CanvasFont": null,
-  "Settings_ToolPreviews": null,
-  "Settings_Files": null,
-  "Settings_AutosaveFiles": null,
-  "Settings_AutosaveInterval": null,
-  "Settings_OpenAutosavesFolder": null,
-  "Settings_Apply": null,
-  "Settings_Reset": null,
-  "Settings_ResetWarningMessage": null,
-  "Error_Settings_InvalidAutosaveIntervalMessage": null,
-  "Palette": null,
-  "Name": null,
-  "Palette_Characters": null,
-  "Error_Palette_InvalidCharacterMessage": null,
-  "Error_Palette_InvalidNameMessage": null,
-  "Error_Palette_InvalidFileNameMessage": null,
-  "Palette_CreateBusy": null,
-  "Palette_CreateFailedMessage": null,
-  "Palette_EditBusy": null,
-  "Palette_EditFailedMessage": null,
-  "Palette_RemoveMessage": null,
-  "Palette_RemoveBusy": null,
-  "Palette_RemoveFailedMessage": null,
-  "Error_Palette_AlreadyExistsMessage": null,
-  "Palette_EditPresetPaletteMessage": null,
-  "Palette_RemovePresetPaletteMessage": null,
-  "Palette_New": null,
-  "Palette_Edit": null,
-  "Palette_Remove": null,
-  "LayerOptions": null,
-  "LayerOptions_Offset": null,
-  "Tool_NoLayerSelectedCaption": null,
-  "Tool_NoLayerSelectedMessage": null,
-  "Tool_Size": null,
-  "Tool_StayInsideSelection": null,
-  "Tool_EightDirectional": null,
-  "Tool_Fill": null,
-  "File_Drop_NoExtensionMessage": null,
-  "File_Drop_UnknownExtensionMessage": null,
-  "File_DifferentVersionMessage": null,
-  "File_ExportFailedMessage": null,
-  "File_ExportBusy": null,
-  "File_ExportSuccessMessage": null,
-  "File_SaveFailedMessage": null,
-  "File_SaveBusy": null,
-  "File_SaveSuccessMessage": null,
-  "File_OpenBusy": null,
-  "File_OpenFailedMessage": null,
-  "File_ImportBusy": null,
-  "File_ImportFailedMessage": null,
-  "File_Close": null,
-  "File_LargeFileWarningMessage": null,
-  "File_TooLargeMessage": null,
-  "File_CloseWithoutSavingWarningMessage": null,
-  "Error_Application_StartUpErrorMessage": null,
-  "Application_CloseWithoutSavingWarningMessage": null,
-  "Application_AutoCloseMessage": null,
-  "Application_CloseBackgroundTaskErrorMessage": null,
-  "Application_AlreadyRunningMessage": null,
-  "BackgroundTaskBusyMessage": null,
-  "Application_Exit_SettingsSaveErrorMessage": null,
-  "About": null,
+  "Settings_UserInterface": "Interfaz de usuario",
+  "Settings_CanvasFont": "Fuente de lienzo",
+  "Settings_ToolPreviews": "Mostrar vistas previas de herramientas",
+  "Settings_Files": "Archivos",
+  "Settings_AutosaveFiles": "Archivos guardados automáticamente",
+  "Settings_AutosaveInterval": "Guardar cada {0} minutos",
+  "Settings_OpenAutosavesFolder": "Abrir carpeta de autoguardado",
+  "Settings_Apply": "Aplicar cambios",
+  "Settings_Reset": "Restablecer todo",
+  "Settings_ResetWarningMessage": "¿Estás seguro de que quieres restablecer todos los ajustes?",
+  "Error_Settings_InvalidAutosaveIntervalMessage": "¡Intervalo de autoguardado no válido! El intervalo de tiempo debe ser mayor que 0 y menor que 120 minutos y no tener puntos decimales.",
+  "Palette": "Paleta",
+  "Name": "Nombre",
+  "Palette_Characters": "Carácters",
+  "Error_Palette_InvalidCharacterMessage": "La paleta contiene un carácter no válido: {0}",
+  "Error_Palette_InvalidNameMessage": "¡Nombre no válido! El nombre de la paleta no puede estar vacío o contener sólo espacios en blanco.",
+  "Error_Palette_InvalidFileNameMessage": "¡Nombre no válido! El nombre de la paleta contiene estos caracteres: {0}",
+  "Palette_CreateBusy": "Creando paleta {0}...",
+  "Palette_CreateFailedMessage": "¡No se ha podido crear la paleta! Mensaje de excepción: {0}",
+  "Palette_EditBusy": "Editando paleta {0}...",
+  "Palette_EditFailedMessage": "¡Error al editar la paleta {0}! Mensaje de excepción: {1}",
+  "Palette_RemoveMessage": "¿Está seguro de que desea eliminar la paleta {0}?\r\nEsto no se puede deshacer.",
+  "Palette_RemoveBusy": "Eliminar paleta {0}...",
+  "Palette_RemoveFailedMessage": "¡Error al eliminar la paleta {0}! Mensaje de excepción: {1}",
+  "Error_Palette_AlreadyExistsMessage": "¡La paleta {0} ya existe!",
+  "Palette_EditPresetPaletteMessage": "No se pueden editar las paletas preestablecidas.",
+  "Palette_RemovePresetPaletteMessage": "No se pueden eliminar las paletas preestablecidas.",
+  "Palette_New": "Nueva paleta",
+  "Palette_Edit": "Editar la palette",
+  "Palette_Remove": "Eliminar la palette",
+  "LayerOptions": "Opciones de capa",
+  "LayerOptions_Offset": "Desplazamiento",
+  "Tool_NoLayerSelectedCaption": "Ninguna capa seleccionada",
+  "Tool_NoLayerSelectedMessage": "¡Seleccione una capa!",
+  "Tool_Size": "Talla",
+  "Tool_StayInsideSelection": "Permanecer en la selección",
+  "Tool_EightDirectional": "Ocho direccionales",
+  "Tool_Fill": "Rellenar",
+  "File_Drop_NoExtensionMessage": "¡No se puede abrir un archivo sin extensión!\nRuta de archivo: {0}",
+  "File_Drop_UnknownExtensionMessage": "¡No se puede abrir un archivo con extensión {0}!\nRuta del fichero: {1}",
+  "File_DifferentVersionMessage": "Es posible que el archivo ASCII Art no sea totalmente compatible con esta compilación, la versión del archivo no es igual a la versión del archivo que esta compilación está hecha para manejar.\r\nVersión del archivo ASCII Art: {0}\r\nVersión actual del archivo: {1}",
+  "File_ExportFailedMessage": "¡Error al exportar el archivo de arte!\r\nMensaje de excepción: {0}",
+  "File_ExportBusy": "Exportando a {0}...",
+  "File_ExportSuccessMessage": "¡Archivo de arte exportado a {0}!\r\n¿Abrir archivo?",
+  "File_SaveFailedMessage": "¡Error al guardar el archivo de arte!\r\nMensaje de excepción: {0}",
+  "File_SaveBusy": "Guardando {0}...",
+  "File_SaveSuccessMessage": "¡Archivo de arte guardado en {0}!",
+  "File_OpenBusy": "Abriendo {0}...",
+  "File_OpenFailedMessage": "¡Error al abrir el archivo de arte!\r\nMensaje de excepción: {0}",
+  "File_ImportBusy": "Importando {0}...",
+  "File_ImportFailedMessage": "¡Error al importar el archivo de arte!\r\nMensaje de excepción: {0}",
+  "File_Close": "Cerrar archivo",
+  "File_LargeFileWarningMessage": "El archivo que está intentando crear/editar/abrir tiene un área de lienzo de {0} caracteres. Esto está por encima del límite de área recomendado de {1} caracteres.\nEste archivo puede tardar mucho tiempo en cargarse y guardarse, y puede ser pesado para el rendimiento.\n¿Está seguro de que desea continuar?",
+  "File_TooLargeMessage": "El área del lienzo es demasiado grande. Máx: {0} caracteres ({1} caracteres})",
+  "File_CloseWithoutSavingWarningMessage": "Has hecho algunos cambios que no se han guardado.\r\n¿Quiere guardarlos?",
+  "Error_Application_StartUpErrorMessage": "Parece que {0} se ha encontrado con una excepción no controlada y debe cerrarse. Si esto sigue ocurriendo, por favor informa al creador de {0}.\r\n¿Abrir archivo de registro?",
+  "Application_CloseWithoutSavingWarningMessage": "Ha realizado algunos cambios que no se han guardado.\r\n¿Está seguro de que desea salir? (Se descartarán todos los cambios)",
+  "Application_AutoCloseMessage": "La aplicación se cerrará automáticamente cuando la tarea en segundo plano actual haya finalizado después de este mensaje.",
+  "Application_CloseBackgroundTaskErrorMessage": "Se ha producido un error al completar la tarea en segundo plano, se ha cancelado la salida de la aplicación.\r\nMensaje de excepción: {0}",
+  "Application_AlreadyRunningMessage": "Ya hay una instancia de {0} en ejecución.",
+  "BackgroundTaskBusyMessage": "La tarea en segundo plano actual debe finalizar para poder realizar esta acción.",
+  "Application_Exit_SettingsSaveErrorMessage": "No se ha podido guardar la configuración al salir de la aplicación.\r\nMensaje de excepción: {0}\r\n¿Abrir archivo de registro?",
+  "About": "Acerca del programa",
   "Credits": "Créditos",
   "Credits_Translation": "Kiara, el proyecto Polyglot, Google Translate",
   "Credits_Section_Translation": "Traducción",
@@ -159,30 +162,31 @@
   "Credits_Section_DevelopedBy": "Desarrollado por",
   "Credits_Testers": "Sin probadores",
   "Credits_Section_Testers": "Probadores",
-  "Default_Palettes_New": null,
-  "Default_Layers_Background": null,
-  "Default_Layers_NewLayer": null,
-  "Default_Layers_CloneFormat": null,
-  "Error_DefaultInvalidPropertyMessage": null,
-  "PresetPalette_Alphabet": null,
-  "PresetPalette_Main": null,
-  "PresetPalette_Numbers": null,
-  "PresetPalette_Shapes": null,
-  "PresetPalette_Braille6": null,
-  "PresetPalette_Braille8": null,
-  "Autosave": null,
-  "Autosave_Busy": null,
-  "Error_Autosave_FileSaving": null,
-  "Error_Autosave_SettingsSaving": null,
-  "Tool_Options": null,
-  "Tool_PencilTool": null,
-  "Tool_EraserTool": null,
-  "Tool_SelectTool": null,
-  "Tool_MoveTool": null,
-  "Tool_LineTool": null,
-  "Tool_BucketTool": null,
-  "Tool_TextTool": null,
-  "Tool_RectangleTool": null,
-  "Tool_EllipseTool": null,
-  "SupportedFiles": null
+  "Default_Palettes_New": "Nueva paleta",
+  "Default_Layers_Background": "Fondo",
+  "Default_Layers_NewLayer": "Nueva capa",
+  "Default_Layers_CloneFormat": "{0} copia",
+  "Error_DefaultInvalidPropertyMessage": "¡Inválido {0}!",
+  "PresetPalette_Alphabet": "Alfabeto",
+  "PresetPalette_Main": "Principales caracteres ASCII",
+  "PresetPalette_Numbers": "Números",
+  "PresetPalette_Shapes": "Formas",
+  "PresetPalette_Braille6": "Braille de 6 puntos",
+  "PresetPalette_Braille8": "Braille de 8 puntos",
+  "Autosave": "Autoguardado",
+  "Autosave_Busy": "Guardar automáticamente todos los archivos abiertos...",
+  "Error_Autosave_UnfinishedQuit": "El autoguardado tardó más de 30 segundos en finalizar.",
+  "Error_Autosave_FileSaving": "¡Falló el autoguardado!\r\nMensaje de excepción: {0}",
+  "Error_Autosave_SettingsSaving": "Error en la actualización de la configuración durante el autoguardado.\r\nMensaje de excepción: {0}",
+  "Tool_Options": "Opciones de herramientas",
+  "Tool_PencilTool": "Lápiz",
+  "Tool_EraserTool": "Borrador",
+  "Tool_SelectTool": "Seleccionar",
+  "Tool_MoveTool": "Mover",
+  "Tool_LineTool": "Línea",
+  "Tool_BucketTool": "Balde",
+  "Tool_TextTool": "Texto",
+  "Tool_RectangleTool": "Rectángulo",
+  "Tool_EllipseTool": "Elipse",
+  "SupportedFiles": "Tipos de archivos admitidos"
 }
