--- a/Resources/Languages/English.json
+++ b/Resources/Languages/English.json
@@ -65,29 +65,32 @@
   "Filters_Outline_Character": "Character",
   "Filters_Outline_Character_Tooltip": "Character to use as the outline.",
   "Filters_Wave": "Wave",
-  "Filters_Main_Strength": "Strength",
+  "Filters_Wave_Description": "Distorts a layer along the sine wave and the specified axis.",
+  "Filters_Main_Offset": "Offset",
+  "Filters_Wave_Offset_Tooltip": "Sine wave offset",
   "Filter_Apply": "Apply filter",
   "Create": "Create",
   "Edit": "Edit",
   "ASCIIArt": "ASCII Art",
   "Size": "Size",
-  "InvalidSizeMessage": "Width & height must be above 0 and natural numbers!",
+  "InvalidSizeMessage": "Width & height must both be above 0 and must both be natural numbers!",
   "ImageASCIIArtExportOptions": "Image ASCII Art Export Options",
   "TextSize": "Text Size",
   "Colors": "Colors",
   "BackgroundColor": "Background",
   "TextColor": "Text",
   "Error_InvalidImageExportTextSizeMessage": "Invalid text size! Text size must be between 1 and 256.",
-  "ColorPicker": "Color Picker",
+  "ColorPicker": "Color picker",
   "HexColor": "Hex",
   "Error_InvalidHexColorMessage": "Invalid hex color!",
   "Error_InvalidColorMessage": "Invalid color!",
-  "ImageASCIIArtImportOptions": "Image ASCII Art Import Options",
+  "ImageASCIIArtImportOptions": "Image ASCII art import options",
   "InvertBrightness": "Invert brightness",
   "Scale": "Scale",
   "ImageArtLayerConverter_Characters": "Characters",
   "ImageArtLayerConverter_Characters_Info": "<= DENSER  =========  SPARSER =>\n(Space is an empty character)",
-  "Error_ImageArtLayerConverter_Characters_Invalid": "Import palette must use atleast 1 character!",
+  "Error_ImageArtLayerConverter_Characters_Invalid": "Import palette must use at least 1 character!",
+  "Language_GetStreamError": "Failed to get language data, set to default!",
   "Settings_Language": "Language",
   "Settings_UserInterface": "User interface",
   "Settings_CanvasFont": "Canvas font",
@@ -119,7 +122,7 @@
   "Palette_New": "New palette",
   "Palette_Edit": "Edit palette",
   "Palette_Remove": "Remove palette",
-  "LayerOptions": "Layer Options",
+  "LayerOptions": "Layer options",
   "LayerOptions_Offset": "Offset",
   "Tool_NoLayerSelectedCaption": "No layer selected",
   "Tool_NoLayerSelectedMessage": "Please select a layer!",
@@ -140,12 +143,12 @@
   "File_OpenFailedMessage": "Failed to open art file!\nException message: {0}",
   "File_ImportBusy": "Importing {0}...",
   "File_ImportFailedMessage": "Failed to import art file!\nException message: {0}",
-  "File_Close": "Close File",
+  "File_Close": "Close file",
   "File_LargeFileWarningMessage": "The file you're trying to create/edit/open has a canvas area of {0} characters. This is above the recommended area limit of {1} characters.\nThis file might take a long time to load and save, and can be performance heavy.\nAre you sure you want to continue?",
   "File_TooLargeMessage": "Canvas area is too large! Max: {0} characters ({1} characters}",
   "File_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nWould you like to save?",
-  "Error_Application_StartUpErrorMessage": "It seems {0} has run into an unhandled exception, and must close! If this keeps occuring, please inform the creator of {0}!\\nOpen log file?",
-  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nAre you sure want to exit? (All changes will be discarded)",
+  "Error_Application_StartUpErrorMessage": "It seems {0} has run into an unhandled exception, and must close! If this keeps occuring, please inform the creator of {0}!\nOpen log file?",
+  "Application_CloseWithoutSavingWarningMessage": "You have made some changes that haven't been saved.\nAre you sure that you want to exit? (All changes will be discarded)",
   "Application_AutoCloseMessage": "Application will automatically close when the current background task has finished after this message.",
   "Application_CloseBackgroundTaskErrorMessage": "An error occurred while completing background task, exit of application cancelled.\nException message: {0}",
   "Application_AlreadyRunningMessage": "There is already an instance of {0} running!",
@@ -172,15 +175,16 @@
   "PresetPalette_Braille8": "8-dot braille",
   "Autosave": "Autosave",
   "Autosave_Busy": "Autosaving all open files...",
+  "Error_Autosave_UnfinishedQuit": "Autosave took longer than 30 seconds to finish.",
   "Error_Autosave_FileSaving": "Autosave failed!\nException message: {0}",
   "Error_Autosave_SettingsSaving": "Settings update while autosaving failed!\nException message: {0}",
-  "Tool_Options": "Tool Options",
+  "Tool_Options": "Tool options",
   "Tool_PencilTool": "Pencil",
   "Tool_EraserTool": "Eraser",
   "Tool_SelectTool": "Select",
   "Tool_MoveTool": "Move",
   "Tool_LineTool": "Line",
-  "Tool_BucketTool": "Bucket",
+  "Tool_BucketTool": "Paintbucket",
   "Tool_TextTool": "Text",
   "Tool_RectangleTool": "Rectangle",
   "Tool_EllipseTool": "Ellipse",
