--- a/Resources/Languages/French.json
+++ b/Resources/Languages/French.json
@@ -3,8 +3,8 @@
   "FileMenu": "Fichier",
   "NewFile": "Nouveau",
   "OpenFile": "Ouvrir",
-  "SaveFile": "Enregistrer",
-  "SaveAsFile": "Enregistrer sous",
+  "SaveFile": "Sauvegarder",
+  "SaveAsFile": "Sauvegarder sous",
   "ImportFile": "Importer",
   "ExportFile": "Exporter",
   "EditFile": "Modifier le fichier",
@@ -163,6 +163,7 @@
   "Default_Palettes_New": "Nouvelle palette",
   "Default_Layers_Background": "Arrière-plan",
   "Default_Layers_NewLayer": "Nouvelle calque",
+  "Default_Layer_Imported": "Calque importée",
   "Default_Layers_CloneFormat": "{0} copie",
   "Error_DefaultInvalidPropertyMessage": "Invalide {0}!",
   "PresetPalette_Alphabet": "Alphabet",
